unpackaged/main/default/objects/Paitant__c/Paitant__c.object-meta.xml
<CustomObject>
    <label>Paitant</label>
    <nameField>
        <label>Paitant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paitant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>