unpackaged/main/default/objects/Paitant__c/fields/Aadhar_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aadhar Eligible</label>
    <type>Checkbox</type>
</CustomField>