unpackaged/main/default/objects/Paitant__c/fields/Aadhar_no__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_no__c</fullName>
    <label>Aadhar no</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>