unpackaged/main/default/objects/Paitant__c/fields/Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_No__c</fullName>
    <label>Contact No</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>