unpackaged/main/default/objects/Paitant__c/fields/Discharge__c.field-meta.xml
<CustomField>
    <fullName>Discharge__c</fullName>
    <label>Discharge</label>
    <type>Date</type>
</CustomField>